--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,7 +27,7 @@ search:
 heading_anchors: true
 
 # Footer
-footer_content: "Made with persistence by BTuff | <a href=\"https://www.youtube.com/@BTuffSecurity\">YouTube</a> | <a href=\"https://github.com/BadaTuff/BTuff-Security\">GitHub</a>"
+footer_content: "Made with persistence by BTuff | <a href=\"https://www.linkedin.com/in/muhiz-bada-99646325b/\">LinkedIn</a> | <a href=\"https://www.youtube.com/@BTuffSecurity\">YouTube</a> | <a href=\"https://github.com/BadaTuff/BTuff-Security\">GitHub</a>"
 
 # Back to top link
 back_to_top: true
@@ -38,9 +38,11 @@ nav_sort: desc
 
 # Aux links (top right)
 aux_links:
-  "YouTube Channel":
+  "LinkedIn":
+    - "https://www.linkedin.com/in/muhiz-bada-99646325b/"
+  "YouTube":
     - "https://www.youtube.com/@BTuffSecurity"
-  "GitHub Repo":
+  "GitHub":
     - "//github.com/BadaTuff/BTuff-Security"
 
 aux_links_new_tab: true
